<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ImageView
        android:id="@+id/register_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:padding="42dp">

        <TextView
            android:id="@+id/welcome_message_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/register_your_company"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/welcome_message_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_company_welcome_message"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_message_header"/>

        <EditText
            android:id="@+id/company_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/green_rectangle_field"
            android:hint="@string/company_name"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_message_description"/>

        <EditText
            android:id="@+id/company_nip_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/green_rectangle_field"
            android:hint="@string/company_nip"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_name_input"/>

        <EditText
            android:id="@+id/company_address_street_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/green_rectangle_field"
            android:hint="@string/address_street"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_nip_input"/>

        <EditText
            android:id="@+id/company_address_street_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/green_rectangle_field"
            android:hint="@string/address_street_number"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_address_street_input"/>

        <EditText
            android:id="@+id/company_address_city_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/green_rectangle_field"
            android:hint="@string/address_city"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_address_street_number_input"/>

        <TextView
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/green_rectangle_filled"
            android:padding="8dp"
            android:text="@string/register_button"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_address_city_input"/>

        <ProgressBar
            android:id="@+id/register_button_progress"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:theme="@style/WhiteProgressBar"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/register_button"/>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
