<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <RelativeLayout
            android:id="@+id/my_items_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="58dp"
            android:layout_marginRight="4dp"
            android:layout_toLeftOf="@+id/center_shim"
            android:layout_toStartOf="@+id/center_shim"
            android:background="@drawable/green_rectangle_field">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_above="@+id/my_items_button_text"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_my_items" />

            <TextView
                android:id="@+id/my_items_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/main_my_items_button"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <View
            android:id="@+id/center_shim"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />

        <RelativeLayout
            android:id="@+id/scan_item_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="58dp"
            android:layout_marginLeft="4dp"
            android:layout_toEndOf="@+id/center_shim"
            android:layout_toRightOf="@+id/center_shim"
            android:background="@drawable/green_rectangle_field">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_above="@+id/scan_item_button_text"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_scan_item" />

            <TextView
                android:id="@+id/scan_item_button_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/main_scan_button"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/log_out_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/green_rectangle_field"
            android:gravity="center"
            android:text="@string/main_log_out_button"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</FrameLayout>